Made elements into buttons

--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,12 @@
 <html>
     <body>
-        <h1>Just a little guy</h1>
-        <button id="blue">Be blue!</button>
-        <button id="green">Be green!</button>
-        <script src="popup.js"></script> 
+        <link rel="stylesheet" href="css/popstyles.css">
+        <div>
+            <h1>Logo Here!</h1>
+        </div>
+        <div>
+            <input type="checkbox" id="check">Build a better bridge!</input>
+        </div>
+        <script src="js/popup.js"></script> 
     </body>
 </html>
