Checkbox broken, specifict table targeting working

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
     <body>
         <link rel="stylesheet" href="css/popstyles.css">
         <div>
-            <h1>Logo Here!</h1>
+            <img src="images/TextLogo.png" alt="Logo">
         </div>
         <div>
             <input type="checkbox" id="check">Build a better bridge!</input>
