Added button interaction

--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,11 @@
 <html>
     <body>
         <link rel="stylesheet" href="css/popstyles.css">
-        <div>
-            <img src="images/TextLogo.png" alt="Logo">
-        </div>
-        <div>
-            <input type="checkbox" id="check">Build a better bridge!</input>
+        <div class="buttonBox">
+            <input type="checkbox" id="check">
+            <label for="check">
+                <img src="images/ExtLogo.png" alt="Logo">
+            </label>
         </div>
         <script src="js/popup.js"></script> 
     </body>
