--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,9 @@
         <div class="buttonBox">
             <input type="checkbox" id="check">
             <label for="check">
-                <img src="images/ExtLogo.png" alt="Logo">
+                <img src="images/uofl_landscape" alt="Logo">
             </label>
+            <p>Click to build a better bridge!</p>
         </div>
         <script src="js/popup.js"></script> 
     </body>
