--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
         <div class="buttonBox">
             <input type="checkbox" id="check">
             <label for="check">
-                <img src="images/uofl_landscape" alt="Logo">
+                <img src="images/ExtLogo.png" alt="Logo">
             </label>
             <p>Click to build a better bridge!</p>
         </div>
